src/objects/Oktopost_Social_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oktopost Social Activities</relationshipLabel>
        <relationshipName>Oktopost_Social_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_DateTime__c</fullName>
        <label>Activity Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Activity_Id__c</fullName>
        <label>Activity Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Text__c</fullName>
        <label>Activity Text</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Tags__c</fullName>
        <label>Campaign Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Oktopost Social Activities</relationshipLabel>
        <relationshipName>Oktopost_Social_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment_Keywords__c</fullName>
        <label>Comment Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Oktopost Social Activities</relationshipLabel>
        <relationshipName>Oktopost_Social_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Oktopost Social Activities</relationshipLabel>
        <relationshipName>Oktopost_Social_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message_Keywords__c</fullName>
        <label>Message Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OktDate__c</fullName>
        <label>OktDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_DateTime__c</fullName>
        <label>Post Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Post_Id__c</fullName>
        <label>Post Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Source__c</fullName>
        <label>Post Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poster_Name__c</fullName>
        <label>Poster Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_URL__c</fullName>
        <label>Remote Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sentiment_Score__c</fullName>
        <formula>IF( Sentiment__c = &quot;positive&quot;, 100, IF (Sentiment__c = &quot;negative&quot;, 0, IF ( Sentiment__c = &quot;neutral&quot;, 50, IF(Sentiment__c = &quot;mixed&quot;, 50, NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sentiment Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sentiment__c</fullName>
        <label>Sentiment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_Type__c</fullName>
        <formula>IF( ISBLANK(Contact__c), &quot;Lead&quot;, &quot;Contact&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Who Type</label>
        <type>Text</type>
    </fields>
    <label>Oktopost Social Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Lead__c</columns>
        <columns>Activity_DateTime__c</columns>
        <columns>Network__c</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Profile_Name__c</columns>
        <columns>Sentiment__c</columns>
        <columns>Remote_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Reading Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oktopost Social Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>